* Fine-tuned icon to match Android's design.
* Updated emojis for Android-O.
* Localization update: .

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestone/82